--- a/20200515text1/20200515text1.vcxproj
+++ b/20200515text1/20200515text1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{99F192E6-4E42-47F5-9264-79F94F1E4B1A}</ProjectGuid>
     <RootNamespace>My20200515text1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <ProjectName>20200515text3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -125,7 +126,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="20200515text1.cpp" />
+    <ClCompile Include="funtions.cpp" />
     <ClCompile Include="text3.cpp" />
   </ItemGroup>
   <ItemGroup>
